<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Running Application</string>

    <!-- Main -->
    <string name="main_button_label_calories">Calculate calories</string>
    <string name="main_button_label_browse">Browse routes</string>
    <string name="main_navigation_label_routes">Routes</string>
    <string name="main_navigation_label_calories">Calories</string>
    <string name="main_navigation_label_playlists">My Playlists</string>

    <!-- Route -->
    <string name="route_toolbar_label">Walking routes</string>
    <string name="route_button_label_description">Description</string>
    <string name="route_button_label_location">Location</string>

    <!-- Workouts -->
    <string name="workout_toolbar_label">My Workouts</string>
    <string name="main_navigation_label_workouts">My Workouts</string>
    <string name="workout_toolbar_create_label">New Workout</string>
    <string name="workout_create_date">Date</string>
    <string name="workout_create_label">Label</string>
    <string name="workout_create_distance">Distance</string>
    <string name="workout_create_duration">Duration</string>
    <string name="workout_create_distance_unit">km</string>
    <string name="workout_create_duration_unit">min</string>
    <string name="workout_create_button_label">Create</string>
    <string name="workout_create_error_empty">Field is required</string>
    <string name="workout_create_error_format">Wrong format</string>
    <string name="workout_options_menu_sort_label">Sort</string>
    <string name="workout_options_menu_filter_label">Filter</string>

    <string name="workout_list_fab_text_start">Start</string>
    <string name="workout_list_fab_text_create">Create</string>
    <string name="workout_start_button_text_start">Start</string>
    <string name="workout_start_button_text_finish">Finish</string>
    <string name="workout_start_button_text_power">Power</string>
    <string name="workout_start_button_text_cancel">Cancel</string>
    <string-array name="workout_toast_motivation">
        <item>Run longer! :)</item>
        <item>Run faster! :)</item>
    </string-array>
    <string name="workout_notification_channel_name">Workout tracker</string>
    <string name="workout_notification_content_title">Workout</string>
    <string name="workout_notification_content_text">
        Running application is tracking your workout.
    </string>
    <string name="workout_label">Workout</string>


    <!-- Calories -->
    <string name="calories_weight">Weight</string>
    <string name="calories_height">Height</string>
    <string name="calories_age">Age</string>
    <string name="calories_male">Male</string>
    <string name="calories_female">Female</string>
    <string name="calories_duration">Duration</string>
    <string name="calories_button_label_calculate">Calculate</string>
    <string name="calories_weight_unit">kg</string>
    <string name="calories_height_unit">cm</string>
    <string name="calories_age_unit">year</string>
    <string name="calories_duration_unit">min</string>
    <string name="calories_burned">Burned</string>
    <string name="calories_needed">Needed</string>
    <string name="calories_error_message">Wrong values!</string>
    <string name="calories_toolbar_label">Calories calculator</string>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="login">Login</string>
    <string name="register_link">Do not have an account? Register here</string>

    <string name="registration_label">Registration</string>
    <string name="profile_pic">Upload profile picture (optional)</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="login_link">Already have an account? Login here</string>
    <string name="registration_success">Registation succesfful</string>
    <string name="registrayion_error">Registation failed, please try again</string>
    <string name="workout_start">Workout</string>

    <string name="notifications">Reminders</string>
    <string name="choose_time">Choose time</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="thu">T</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="sun">S</string>
    <string name="set_a_reminder">Set reminder</string>
    <string name="remove_reminder">Remove reminder</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics">Statistics</string>

</resources>