<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/bottom_navigation_start_workouts"
            android:icon="@drawable/outline_home_black_48"
            android:title="@string/home"
            />

        <item
            android:id="@+id/bottom_navigation_routes"
            android:icon="@drawable/baseline_terrain_black_48"
            android:title="@string/main_navigation_label_routes" />

        <item
            android:id="@+id/bottom_navigation_workouts"
            android:icon="@drawable/baseline_directions_run_black_48"
            android:title="@string/main_navigation_label_workouts" />

        <item
            android:id="@+id/bottom_navigation_calories"
            android:icon="@drawable/baseline_bar_chart_black_48"
            android:title="@string/main_navigation_label_calories" />

        <item
            android:id="@+id/bottom_navigation_playlists"
            android:icon="@drawable/ic_baseline_music_note_24"
            android:title="@string/main_navigation_label_playlists" />

        <item
            android:id="@+id/bottom_navigation_notifications"
            android:icon="@drawable/outline_notifications_black_48"
            android:title="@string/notifications" />
    </group>

    <group android:id="@+id/group2" android:checkableBehavior="single">
        <item
            android:id="@+id/menu_logout"
            android:title="Log Out"
            android:icon="@drawable/baseline_logout_24"
            />
    </group>
</menu>