<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".account.RegisterFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        app:title="@string/app_name"
        />

    <TextView
        android:id="@+id/regscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/registration_label"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        app:riv_oval="true"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_pic"
        android:layout_gravity="center"
        android:textSize="12dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstname_label"
            style="@style/MaterialEditText.MaterialEditTextConstraintable"
            android:layout_marginStart="@dimen/default_horizontal_margin"
            android:layout_marginEnd="@dimen/default_horizontal_margin"
            android:hint="@string/first_name"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lastname_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname_label"
            style="@style/MaterialEditText.MaterialEditTextConstraintable"
            android:layout_marginStart="@dimen/default_horizontal_margin"
            android:layout_marginEnd="@dimen/default_horizontal_margin"
            android:layout_marginTop="20dp"
            android:hint="@string/last_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstname_label"
            app:layout_constraintBottom_toTopOf="@id/email_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_label"
            style="@style/MaterialEditText.MaterialEditTextConstraintable"
            android:layout_marginStart="@dimen/default_horizontal_margin"
            android:layout_marginEnd="@dimen/default_horizontal_margin"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastname_label"
            app:layout_constraintBottom_toTopOf="@id/password_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_label"
            style="@style/MaterialEditText.MaterialEditTextConstraintable"
            android:layout_marginStart="@dimen/default_horizontal_margin"
            android:layout_marginEnd="@dimen/default_horizontal_margin"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:layout_marginTop="40dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/login_link"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_link"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/blue"
        />

</LinearLayout>