<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workouts.WorkoutStartFragment">

    <TextView
        android:id="@+id/workout_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="00:00:00.00"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:27:13.84" />

    <TextView
        android:id="@+id/start_time_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="00:00:00.00"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:27:13.84" />

    <TextView
        android:id="@+id/step_time_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="0 steps"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_time_counter"
        tools:text="10 steps" />

    <Button
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/workout_start_button_text_start"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"
        app:layout_constraintTop_toBottomOf="@id/step_time_counter" />

    <Button
        android:id="@+id/finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:enabled="false"
        android:text="@string/workout_start_button_text_finish"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"
        app:layout_constraintTop_toBottomOf="@id/start" />

    <Button
        android:id="@+id/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/workout_start_button_text_cancel"
        app:layout_constraintEnd_toEndOf="@id/workout_duration"
        app:layout_constraintStart_toStartOf="@id/workout_duration"
        app:layout_constraintTop_toBottomOf="@id/finish" />

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/previous"-->
<!--        android:layout_width="60dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/cancel"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@id/recycler_view_playlists"-->
<!--        app:layout_constraintRight_toLeftOf="@id/play_pause"-->
<!--        android:layout_marginLeft="50dp"-->
<!--        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"-->
<!--        app:icon="@drawable/outline_skip_previous_black_48"-->
<!--        app:iconGravity="textEnd"-->
<!--        android:padding="0dp"-->
<!--        android:insetLeft="0dp"-->
<!--        android:insetTop="0dp"-->
<!--        android:insetRight="0dp"-->
<!--        android:insetBottom="0dp"-->
<!--        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"-->
<!--        />-->

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/play_pause"-->
<!--        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"-->
<!--        android:layout_width="60dp"-->
<!--        android:layout_height="60dp"-->
<!--        app:icon="@drawable/baseline_play_arrow_black_48"-->
<!--        app:iconGravity="textStart"-->
<!--        android:insetLeft="0dp"-->
<!--        android:insetTop="0dp"-->
<!--        android:insetRight="0dp"-->
<!--        android:insetBottom="0dp"-->
<!--        android:padding="0dp"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/previous"-->
<!--        app:layout_constraintLeft_toRightOf="@id/previous"-->
<!--        app:layout_constraintRight_toLeftOf="@id/next"-->
<!--        app:layout_constraintTop_toTopOf="@id/previous"-->
<!--        app:layout_constraintVertical_bias="0.0"-->
<!--        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />-->

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/next"-->
<!--        android:layout_width="60dp"-->
<!--        android:layout_height="60dp"-->
<!--        app:layout_constraintTop_toTopOf="@id/previous"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/previous"-->
<!--        app:layout_constraintLeft_toRightOf="@id/play_pause"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        android:layout_marginRight="50dp"-->
<!--        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"-->
<!--        app:icon="@drawable/outline_skip_next_black_48"-->
<!--        app:iconGravity="textStart"-->
<!--        android:padding="0dp"-->
<!--        android:insetLeft="0dp"-->
<!--        android:insetTop="0dp"-->
<!--        android:insetRight="0dp"-->
<!--        android:insetBottom="0dp"-->
<!--        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"-->
<!--        />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_playlists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cancel"
        android:layout_marginTop="20dp"
        tools:listitem="@layout/view_holder_playlists" />

</androidx.constraintlayout.widget.ConstraintLayout>